attempt to fix content width problem for left aligned feature_box

--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -181,8 +181,8 @@ body:hover .visually-hidden button {
 /* file page content container */
 
 .full {
-  @include breakpoint($large) {
-    margin-right: -1 * span(2.5 of 12) !important;
+  @include breakpoint($x-large) {
+    margin-right: -1 * span(1.5 of 12) !important;
   }
 }
 
